samples/_failures_safe/1761455127_7e4212_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_56aab704.c: In function ‘main’:
./samples/SAFE/__tmp_56aab704.c:158:5: error: expected declaration or statement at end of input
  158 |     }
      |     ^
